config-root/namespaces/myjenkinsa/jxboot-helmfile-resources/chartmuseum-ingress.yaml
# Source: jxboot-helmfile-resources/templates/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
  name: chartmuseum
  namespace: myjenkinsa
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jenkins-x-chartmuseum
              servicePort: 8080
            path: "/"
      host: chartmuseum-myjenkinsa.34.89.8.12.nip.io
