config-root/namespaces/myjenkinsa/jxboot-helmfile-resources/nexus-ingress.yaml
# Source: jxboot-helmfile-resources/templates/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
  name: nexus
  namespace: myjenkinsa
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nexus
              servicePort: 80
            path: "/"
      host: nexus-myjenkinsa.34.89.8.12.nip.io
